--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
   border-radius: 10px;
   background-color: rgba(128, 0, 128, 0.703);
   margin-top: 20px;
+  box-shadow: 10px 10px rgba(21, 11, 21, 0.566);;
 }
 
 input[type=text]{
@@ -22,6 +23,22 @@ input[type=text]{
   font-size: 15px;
   background-color: rgba(255, 255, 255, 0);
   border: 2px solid pink;
+  color:deeppink;
+}
+
+textarea{
+  font-size: 15px;
+  background-color: rgba(255, 255, 255, 0);
+  border: 2px solid pink;
+  color:deeppink;
+}
+
+.footer{
+  text-align: center;
+  font-size: 20px;
+}
+
+label[for=y/n]{
   color:deeppink;
 }
 
@@ -47,8 +64,8 @@ label{
 }
 
 h1{
-  font-size: 100px;
-  color: rgb(135, 64, 76);
+  font-size: 60px;
+  color: rgb(108, 37, 49);
   font-family: Arial, Helvetica, sans-serif;
 }
 
